# scripter

./: .gitignore  Pipfile  README.md  exec_code.py  file.txt  main.py  pyproject.toml  settings.json
meta/: scripter.py  subcontext.py
