[tool.poetry]
name = "scripter"
version = "0.1.0"
description = "Testcase Generator for Mimir Assignments"
authors = ["Alfonso Irarrazaval <auirarrazaval@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
